src/TypeQLParser.ts
// Generated from src/TypeQL.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { TypeQLListener } from "./TypeQLListener";
import { TypeQLVisitor } from "./TypeQLVisitor";


export class TypeQLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly MATCH = 8;
	public static readonly GET = 9;
	public static readonly DEFINE = 10;
	public static readonly UNDEFINE = 11;
	public static readonly INSERT = 12;
	public static readonly DELETE = 13;
	public static readonly COMPUTE = 14;
	public static readonly THING = 15;
	public static readonly ENTITY = 16;
	public static readonly ATTRIBUTE = 17;
	public static readonly RELATION = 18;
	public static readonly ROLE = 19;
	public static readonly RULE = 20;
	public static readonly OFFSET = 21;
	public static readonly LIMIT = 22;
	public static readonly SORT = 23;
	public static readonly ORDER_ = 24;
	public static readonly ASC = 25;
	public static readonly DESC = 26;
	public static readonly TYPE = 27;
	public static readonly ABSTRACT = 28;
	public static readonly SUB_ = 29;
	public static readonly SUB = 30;
	public static readonly SUBX = 31;
	public static readonly OWNS = 32;
	public static readonly IS_KEY = 33;
	public static readonly REGEX = 34;
	public static readonly AS = 35;
	public static readonly PLAYS = 36;
	public static readonly RELATES = 37;
	public static readonly WHEN = 38;
	public static readonly THEN = 39;
	public static readonly IID = 40;
	public static readonly ISA_ = 41;
	public static readonly ISA = 42;
	public static readonly ISAX = 43;
	public static readonly HAS = 44;
	public static readonly VALUE = 45;
	public static readonly IS = 46;
	public static readonly OR = 47;
	public static readonly NOT = 48;
	public static readonly EQ = 49;
	public static readonly NEQ = 50;
	public static readonly GT = 51;
	public static readonly GTE = 52;
	public static readonly LT = 53;
	public static readonly LTE = 54;
	public static readonly LIKE = 55;
	public static readonly CONTAINS = 56;
	public static readonly GROUP = 57;
	public static readonly COUNT = 58;
	public static readonly MAX = 59;
	public static readonly MIN = 60;
	public static readonly MEAN = 61;
	public static readonly MEDIAN = 62;
	public static readonly STD = 63;
	public static readonly SUM = 64;
	public static readonly LONG = 65;
	public static readonly DOUBLE = 66;
	public static readonly STRING = 67;
	public static readonly BOOLEAN = 68;
	public static readonly DATETIME = 69;
	public static readonly BOOLEAN_ = 70;
	public static readonly TRUE = 71;
	public static readonly FALSE = 72;
	public static readonly STRING_ = 73;
	public static readonly LONG_ = 74;
	public static readonly DOUBLE_ = 75;
	public static readonly DATE_ = 76;
	public static readonly DATETIME_ = 77;
	public static readonly VAR_ = 78;
	public static readonly VAR_ANONYMOUS_ = 79;
	public static readonly VAR_NAMED_ = 80;
	public static readonly IID_ = 81;
	public static readonly LABEL_ = 82;
	public static readonly LABEL_SCOPED_ = 83;
	public static readonly COMMENT = 84;
	public static readonly WS = 85;
	public static readonly UNRECOGNISED = 86;
	public static readonly RULE_eof_query = 0;
	public static readonly RULE_eof_queries = 1;
	public static readonly RULE_eof_pattern = 2;
	public static readonly RULE_eof_patterns = 3;
	public static readonly RULE_eof_definables = 4;
	public static readonly RULE_eof_variable = 5;
	public static readonly RULE_eof_label = 6;
	public static readonly RULE_eof_schema_rule = 7;
	public static readonly RULE_query = 8;
	public static readonly RULE_query_define = 9;
	public static readonly RULE_query_undefine = 10;
	public static readonly RULE_query_insert = 11;
	public static readonly RULE_query_update = 12;
	public static readonly RULE_query_delete = 13;
	public static readonly RULE_query_match = 14;
	public static readonly RULE_query_match_aggregate = 15;
	public static readonly RULE_query_match_group = 16;
	public static readonly RULE_query_match_group_agg = 17;
	public static readonly RULE_modifiers = 18;
	public static readonly RULE_filter = 19;
	public static readonly RULE_sort = 20;
	public static readonly RULE_var_order = 21;
	public static readonly RULE_offset = 22;
	public static readonly RULE_limit = 23;
	public static readonly RULE_match_aggregate = 24;
	public static readonly RULE_aggregate_method = 25;
	public static readonly RULE_match_group = 26;
	public static readonly RULE_definables = 27;
	public static readonly RULE_definable = 28;
	public static readonly RULE_patterns = 29;
	public static readonly RULE_pattern = 30;
	public static readonly RULE_pattern_conjunction = 31;
	public static readonly RULE_pattern_disjunction = 32;
	public static readonly RULE_pattern_negation = 33;
	public static readonly RULE_pattern_variable = 34;
	public static readonly RULE_variable_concept = 35;
	public static readonly RULE_variable_type = 36;
	public static readonly RULE_type_constraint = 37;
	public static readonly RULE_variable_things = 38;
	public static readonly RULE_variable_thing_any = 39;
	public static readonly RULE_variable_thing = 40;
	public static readonly RULE_variable_relation = 41;
	public static readonly RULE_variable_attribute = 42;
	public static readonly RULE_relation = 43;
	public static readonly RULE_role_player = 44;
	public static readonly RULE_player = 45;
	public static readonly RULE_attributes = 46;
	public static readonly RULE_attribute = 47;
	public static readonly RULE_predicate = 48;
	public static readonly RULE_predicate_equality = 49;
	public static readonly RULE_predicate_substring = 50;
	public static readonly RULE_predicate_value = 51;
	public static readonly RULE_schema_rule = 52;
	public static readonly RULE_type_any = 53;
	public static readonly RULE_type_scoped = 54;
	public static readonly RULE_type = 55;
	public static readonly RULE_label_any = 56;
	public static readonly RULE_label_scoped = 57;
	public static readonly RULE_label = 58;
	public static readonly RULE_schema_native = 59;
	public static readonly RULE_type_native = 60;
	public static readonly RULE_value_type = 61;
	public static readonly RULE_value = 62;
	public static readonly RULE_regex = 63;
	public static readonly RULE_unreserved = 64;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"eof_query", "eof_queries", "eof_pattern", "eof_patterns", "eof_definables", 
		"eof_variable", "eof_label", "eof_schema_rule", "query", "query_define", 
		"query_undefine", "query_insert", "query_update", "query_delete", "query_match", 
		"query_match_aggregate", "query_match_group", "query_match_group_agg", 
		"modifiers", "filter", "sort", "var_order", "offset", "limit", "match_aggregate", 
		"aggregate_method", "match_group", "definables", "definable", "patterns", 
		"pattern", "pattern_conjunction", "pattern_disjunction", "pattern_negation", 
		"pattern_variable", "variable_concept", "variable_type", "type_constraint", 
		"variable_things", "variable_thing_any", "variable_thing", "variable_relation", 
		"variable_attribute", "relation", "role_player", "player", "attributes", 
		"attribute", "predicate", "predicate_equality", "predicate_substring", 
		"predicate_value", "schema_rule", "type_any", "type_scoped", "type", "label_any", 
		"label_scoped", "label", "schema_native", "type_native", "value_type", 
		"value", "regex", "unreserved",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "';'", "','", "'{'", "'}'", "'('", "')'", "':'", "'match'", 
		"'get'", "'define'", "'undefine'", "'insert'", "'delete'", "'compute'", 
		"'thing'", "'entity'", "'attribute'", "'relation'", "'role'", "'rule'", 
		"'offset'", "'limit'", "'sort'", undefined, "'asc'", "'desc'", "'type'", 
		"'abstract'", undefined, "'sub'", "'sub!'", "'owns'", "'@key'", "'regex'", 
		"'as'", "'plays'", "'relates'", "'when'", "'then'", "'iid'", undefined, 
		"'isa'", "'isa!'", "'has'", "'value'", "'is'", "'or'", "'not'", "'='", 
		"'!='", "'>'", "'>='", "'<'", "'<='", "'like'", "'contains'", "'group'", 
		"'count'", "'max'", "'min'", "'mean'", "'median'", "'std'", "'sum'", "'long'", 
		"'double'", "'string'", "'boolean'", "'datetime'", undefined, "'true'", 
		"'false'", undefined, undefined, undefined, undefined, undefined, undefined, 
		"'$_'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "MATCH", "GET", "DEFINE", "UNDEFINE", "INSERT", "DELETE", "COMPUTE", 
		"THING", "ENTITY", "ATTRIBUTE", "RELATION", "ROLE", "RULE", "OFFSET", 
		"LIMIT", "SORT", "ORDER_", "ASC", "DESC", "TYPE", "ABSTRACT", "SUB_", 
		"SUB", "SUBX", "OWNS", "IS_KEY", "REGEX", "AS", "PLAYS", "RELATES", "WHEN", 
		"THEN", "IID", "ISA_", "ISA", "ISAX", "HAS", "VALUE", "IS", "OR", "NOT", 
		"EQ", "NEQ", "GT", "GTE", "LT", "LTE", "LIKE", "CONTAINS", "GROUP", "COUNT", 
		"MAX", "MIN", "MEAN", "MEDIAN", "STD", "SUM", "LONG", "DOUBLE", "STRING", 
		"BOOLEAN", "DATETIME", "BOOLEAN_", "TRUE", "FALSE", "STRING_", "LONG_", 
		"DOUBLE_", "DATE_", "DATETIME_", "VAR_", "VAR_ANONYMOUS_", "VAR_NAMED_", 
		"IID_", "LABEL_", "LABEL_SCOPED_", "COMMENT", "WS", "UNRECOGNISED",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(TypeQLParser._LITERAL_NAMES, TypeQLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return TypeQLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "TypeQL.g4"; }

	// @Override
	public get ruleNames(): string[] { return TypeQLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return TypeQLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(TypeQLParser._ATN, this);
	}
	// @RuleVersion(0)
	public eof_query(): Eof_queryContext {
		let _localctx: Eof_queryContext = new Eof_queryContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, TypeQLParser.RULE_eof_query);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.query();
			this.state = 131;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eof_queries(): Eof_queriesContext {
		let _localctx: Eof_queriesContext = new Eof_queriesContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, TypeQLParser.RULE_eof_queries);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 133;
				this.query();
				}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TypeQLParser.MATCH) | (1 << TypeQLParser.DEFINE) | (1 << TypeQLParser.UNDEFINE) | (1 << TypeQLParser.INSERT))) !== 0));
			this.state = 138;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eof_pattern(): Eof_patternContext {
		let _localctx: Eof_patternContext = new Eof_patternContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, TypeQLParser.RULE_eof_pattern);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 140;
			this.pattern();
			this.state = 141;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eof_patterns(): Eof_patternsContext {
		let _localctx: Eof_patternsContext = new Eof_patternsContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, TypeQLParser.RULE_eof_patterns);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.patterns();
			this.state = 144;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eof_definables(): Eof_definablesContext {
		let _localctx: Eof_definablesContext = new Eof_definablesContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, TypeQLParser.RULE_eof_definables);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			this.definables();
			this.state = 147;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eof_variable(): Eof_variableContext {
		let _localctx: Eof_variableContext = new Eof_variableContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, TypeQLParser.RULE_eof_variable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.pattern_variable();
			this.state = 150;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eof_label(): Eof_labelContext {
		let _localctx: Eof_labelContext = new Eof_labelContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, TypeQLParser.RULE_eof_label);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 152;
			this.label();
			this.state = 153;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public eof_schema_rule(): Eof_schema_ruleContext {
		let _localctx: Eof_schema_ruleContext = new Eof_schema_ruleContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, TypeQLParser.RULE_eof_schema_rule);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 155;
			this.schema_rule();
			this.state = 156;
			this.match(TypeQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let _localctx: QueryContext = new QueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, TypeQLParser.RULE_query);
		try {
			this.state = 167;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 158;
				this.query_define();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 159;
				this.query_undefine();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 160;
				this.query_insert();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 161;
				this.query_update();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 162;
				this.query_delete();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 163;
				this.query_match();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 164;
				this.query_match_aggregate();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 165;
				this.query_match_group();
				}
				break;
